Sync all content

--- a/content/resources/1-040s04-th.md
+++ b/content/resources/1-040s04-th.md
@@ -8,6 +8,8 @@ image_metadata:
     (Image courtesy of OCW.)
   credit: ''
   image-alt: A circular diagram of the project management process.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 1-040s04-th.jpg
 uid: e027ee2c-41ac-f5a1-b327-a09e10984433
