--- a/content/resources/1-040s04.md
+++ b/content/resources/1-040s04.md
@@ -9,6 +9,8 @@ image_metadata:
     (Image courtesy of OCW.)
   credit: ''
   image-alt: A circular diagram of the project management process.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 1-040s04.jpg
 uid: ed78302e-f019-4f93-b950-119b5e7e24f5
